--- a/public/app/components/utilities/utilities.html
+++ b/public/app/components/utilities/utilities.html
@@ -1,11 +1,15 @@
-<ul class="nav" id="utilities">
-    <li>
-        <a class="btn" href ui-sref="inventory()">Inventory</a>
-    </li>
-    <li>
-        <a class="btn" href ui-sref="inventory()">Status</a>
-    </li>
-    <li>
-        <a class="btn" href ui-sref="inventory()">Menu</a>
-    </li>
-</ul>
+<div id="utilities">
+  <div class="container">
+    <ul class="nav">
+      <li>
+        <a class="btn" href ui-sref="backpack()">Backpack</a>
+      </li>
+      <li>
+        <a class="btn" href ui-sref="backpack()">Status</a>
+      </li>
+      <li>
+        <a class="btn" href ui-sref="backpack()">Menu</a>
+      </li>
+    </ul>
+  </div>
+</div>
