--- a/public/app/styles/app.scss
+++ b/public/app/styles/app.scss
@@ -77,6 +77,7 @@ p {
 
 @import "_common";
 @import "_grid";
+@import "_backpack";
 @import "_inventory";
 @import "_showcase";
 @import "_directional-controls";
