--- a/public/app/views/structure/structure.html
+++ b/public/app/views/structure/structure.html
@@ -2,34 +2,12 @@
   <div class="col-sm-6">
     <h1>{{ structureCtrl.room.name }}</h1>
     <p ng-hide="structureCtrl.room.isScanned">
-        <a class="btn" href ng-click="structureCtrl.scanRoom(structureCtrl.room)">Scan Room</a>
+      <a class="btn" href ng-click="structureCtrl.scanRoom(structureCtrl.room)">Scan Room</a>
     </p>
     <ul class="nav-showcase" ng-if="structureCtrl.room.isScanned">
-        <li ng-repeat="vessel in structureCtrl.room.vessels">
-            <a class="btn" href ng-click="structureCtrl.openVessel(vessel)" ng-class="{'btn-muted': !vessel.items.length}">
-                {{:: vessel.name }} <span ng-if="!vessel.items.length">(Empty)</span>
-            </a>
-            <div class="modal" ng-if="vessel.isOpen && vessel.items.length">
-              <div class="modal-container">
-                <div class="modal-header">
-                  {{:: vessel.name }}
-                </div>
-                <div class="modal-body">
-                  <st-inventory items="vessel.items" actions="[{ Take: 'takeItem' }]"></st-inventory>
-                </div>
-                <div class="modal-footer">
-                  <div class="row">
-                    <div class="col-sm-6">
-                      <a class="btn" href ng-click="structureCtrl.takeAllItems(vessel)">Take all</a>
-                    </div>
-                    <div class="col-sm-6">
-                      <a class="btn btn-muted" href ng-click="vessel.isOpen = false">Close</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-        </li>
+      <li ng-repeat="vessel in structureCtrl.room.vessels">
+        <st-vessel owner="vessel" item-actions="[{ Take: 'takeItem' }]"></st-vessel>
+      </li>
     </ul>
   </div>
   <div class="col-sm-6" ng-if="structureCtrl.isReady">
