--- a/public/app/components/utilities/utilities.html
+++ b/public/app/components/utilities/utilities.html
@@ -2,13 +2,13 @@
   <div class="container">
     <ul class="nav">
       <li>
-        <a class="btn" href ui-sref="backpack()">Backpack</a>
+        <a class="btn" href ui-sref="backpack">Backpack</a>
       </li>
       <li>
-        <a class="btn" href ui-sref="backpack()">Status</a>
+        <a class="btn" href ui-sref="backpack">Status</a>
       </li>
       <li>
-        <a class="btn" href ui-sref="backpack()">Menu</a>
+        <a class="btn" href ui-sref="backpack">Menu</a>
       </li>
     </ul>
   </div>
