--- a/public/app/views/map/map.html
+++ b/public/app/views/map/map.html
@@ -2,17 +2,17 @@
     <p class="lead">Choose a location to travel.</p>
 </div>
 <ul class="nav-showcase">
-    <li ng-repeat="location in mapCtrl.locations">
-        <a class="btn" href ng-click="mapCtrl.selectLocation(location)">{{ location.name }}</a>
+    <li ng-repeat="location in ::mapCtrl.locations">
+        <a class="btn" href ng-click="mapCtrl.selectLocation(location)">{{::location.name }}</a>
         <ul ng-if="location.isSelected">
             <li>
-                <p>{{ location.description }}</p>
+                <p>{{::location.description }}</p>
                 <div class="row">
                   <div class="col-sm-6">
-                    <a class="btn" href ui-sref="location({ id: location._id })">Travel</a>
+                    <a class="btn" href ui-sref="location(::{ id: location._id })">Travel</a>
                   </div>
                   <div class="col-sm-6">
-                    <a class="btn btn-muted" href ng-click="location.isSelected = false">Cancel</a>
+                    <a class="btn" href ng-click="location.isSelected = false">Cancel</a>
                   </div>
                 </div>
             </li>
