--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/css/app.min.css">
     </head>
-    <body ng-app="{{ module }}">
+    <body>
         <st-header></st-header>
         <div id="game-pane">
             <div class="container">
