--- a/public/app/styles/_variables.scss
+++ b/public/app/styles/_variables.scss
@@ -4,3 +4,6 @@ $color-primary-darkened: darken($color-primary, 25%);
 $color-primary-muted: lighten($color-primary, 70%);
 $color-primary-lightened: lighten($color-primary, 94%);
 $color-highlight: yellow;
+$font-line-height-default: 1.45;
+$font-sans-serif: sans-serif;
+$font-size-default: 13px;
