--- a/public/app/views/location/location.html
+++ b/public/app/views/location/location.html
@@ -1,21 +1,26 @@
-<div class="page-header">
-  <p class="lead">{{:: locationCtrl.location.description }}</p>
+<div id="content-main">
+  <div class="page-header">
+    <p class="lead">{{:: locationCtrl.location.description }}</p>
+  </div>
+  <ul class="nav-showcase">
+    <li ng-repeat="structure in locationCtrl.location.structures">
+      <button class="btn" ng-click="locationCtrl.selectStructure(structure)">{{:: structure.name }}</button>
+      <ul ng-if="structure.isSelected">
+        <li ng-repeat="entrance in structure.entrances">
+          <p>{{:: structure.description }}</p>
+          <div class="row">
+            <div class="col-sm-6">
+              <a class="btn" href ng-click="structure.isSelected = false" ui-sref="structure(::{ locationId: locationCtrl.location._id, structureId: structure._id, roomId: entrance.roomId })">Enter</a>
+            </div>
+            <div class="col-sm-6">
+              <span class="text-muted">({{:: entrance.name }})</span>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </li>
+  </ul>
 </div>
-<ul class="nav-showcase">
-  <li ng-repeat="structure in locationCtrl.location.structures">
-    <a class="btn" href ng-click="locationCtrl.selectStructure(structure)">{{:: structure.name }}</a>
-    <ul ng-if="structure.isSelected">
-      <li ng-repeat="entrance in structure.entrances">
-        <p>{{:: structure.description }}</p>
-        <div class="row">
-          <div class="col-sm-6">
-            <a class="btn" href ng-click="structure.isSelected = false" ui-sref="structure(::{ locationId: locationCtrl.location._id, structureId: structure._id, roomId: entrance.roomId })">Enter</a>
-          </div>
-          <div class="col-sm-6">
-            <span class="text-muted">({{:: entrance.name }})</span>
-          </div>
-        </div>
-      </li>
-    </ul>
-  </li>
-</ul>
+<div id="content-sub">
+  <st-log></st-log>
+</div>
