--- a/public/app/views/map/map.html
+++ b/public/app/views/map/map.html
@@ -1,21 +1,26 @@
-<div class="page-header">
-    <p class="lead">Choose a location to travel.</p>
+<div id="content-main">
+  <div class="page-header">
+      <p class="lead">Choose a location to travel.</p>
+  </div>
+  <ul class="nav-showcase">
+      <li ng-repeat="location in ::mapCtrl.locations">
+          <a class="btn" href ng-click="mapCtrl.selectLocation(location)">{{::location.name }}</a>
+          <ul ng-if="location.isSelected">
+              <li>
+                  <p>{{::location.description }}</p>
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <st-interval-button label="Travel" num-iterations="3" options="{ location: location }" on-complete="mapCtrl.travel"></st-interval-button>
+                    </div>
+                    <div class="col-sm-6">
+                      <a class="btn" href ng-click="location.isSelected = false">Cancel</a>
+                    </div>
+                  </div>
+              </li>
+          </ul>
+      </li>
+  </ul>
 </div>
-<ul class="nav-showcase">
-    <li ng-repeat="location in ::mapCtrl.locations">
-        <a class="btn" href ng-click="mapCtrl.selectLocation(location)">{{::location.name }}</a>
-        <ul ng-if="location.isSelected">
-            <li>
-                <p>{{::location.description }}</p>
-                <div class="row">
-                  <div class="col-sm-6">
-                    <a class="btn" href ui-sref="location(::{ id: location._id })">Travel</a>
-                  </div>
-                  <div class="col-sm-6">
-                    <a class="btn" href ng-click="location.isSelected = false">Cancel</a>
-                  </div>
-                </div>
-            </li>
-        </ul>
-    </li>
-</ul>
+<div id="content-sub">
+  <st-log></st-log>
+</div>
