--- a/public/app/styles/app.scss
+++ b/public/app/styles/app.scss
@@ -92,6 +92,7 @@ p {
 @import "_common";
 @import "_grid";
 @import "_backpack";
+@import "_interval-button";
 @import "_inventory";
 @import "_showcase";
 @import "_modal";
