--- a/public/app/views/structure/structure.html
+++ b/public/app/views/structure/structure.html
@@ -6,7 +6,7 @@
     <h1>{{ structureCtrl.room.name }}</h1>
     <st-minimap structure="structureCtrl.structure"></st-minimap>
     <p ng-if="!structureCtrl.room.isScanned">
-      <button class="btn" ng-click="structureCtrl.scanRoom(structureCtrl.room)">Scan Room</button>
+      <st-interval-button label="Scan Room" label-running="Scanning..." num-iterations="3" on-complete="structureCtrl.scanRoom"></st-interval-button>
     </p>
     <ul class="nav-showcase" ng-if="structureCtrl.room.isScanned">
       <li ng-repeat="vessel in structureCtrl.room.vessels">
