--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -8,13 +8,18 @@
         <link rel="stylesheet" href="/css/app.min.css">
     </head>
     <body>
-        <st-header></st-header>
-        <div id="game-pane">
-            <div class="container">
-                <ui-view></ui-view>
+        <div id="game-wrapper">
+            <div ng-controller="GameController as gameCtrl">
+                <div class="no-click-cover" ng-if="gameCtrl.disableInteractions"></div>
+                <st-header></st-header>
+                <div id="game-pane">
+                    <div class="container">
+                        <ui-view></ui-view>
+                    </div>
+                </div>
+                <st-utilities></st-utilities>
             </div>
         </div>
-        <st-utilities></st-utilities>
         <script src="/js/app.js"></script>
     </body>
 </html>
