Added enemy button.

--- a/public/app/components/interval-button/interval-button.html
+++ b/public/app/components/interval-button/interval-button.html
@@ -1,4 +1,4 @@
-<button type="button" class="btn interval-btn" ng-click="buttonCtrl.start()">
-  <span class="interval-btn-label">{{ buttonCtrl.label }}</span>
-  <span class="interval-btn-meter" style="width: {{ buttonCtrl.meterWidth }}%;"></span>
+<button type="button" class="btn btn-meter btn-interval" ng-click="buttonCtrl.start()">
+  <span class="btn-meter-label">{{ buttonCtrl.label }}</span>
+  <span class="btn-meter-gauge" style="width: {{ buttonCtrl.meterWidth }}%;"></span>
 </button>
